--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -31,7 +31,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            ghcr.io/${{ github.repository_owner }}/void-modding-web
+            ghcr.io/${{ github.repository_owner }}/web
           tags: |
             type=raw,value=latest
           labels: |
