--- a/deployment/compose.yml
+++ b/deployment/compose.yml
@@ -1,25 +1,32 @@
 services:
-  # reverse-proxy:
-  #   image: traefik:v3.1
-  #   command:
-  #     - "--api.insecure=true"
-  #     - "--providers.docker=true"
-  #     - "--providers.docker.exposedbydefault=false"
+  watchtower:
+    image: containrrr/watchtower
+    command:
+      - "--label-enable"
+      - "--interval"
+      - "30"
+      - "--rolling-restart"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
 
-  #     - "--entrypoints.web.address=:80"
-  #   ports:
-  #     - "80:80"
-  #     - "443:443"
-  #     - "8080:8080" # The traefik dashboard
-
-  #   volumes:
-  #     - /var/run/docker.sock:/var/run/docker.sock:ro
+  reverse-proxy:
+    image: traefik:v3.1
+    command:
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entrypoints.web.address=:80"
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
 
   site:
     image: ghcr.io/void-modding/web:latest
     restart: always
-    ports:
-      - "3000:3000"
-    # labels:
-    #   - "traefik.enable=true"
-    #   - "traefik.http.routers.web.rule=Host(`voidmodding.org`)"
+    labels:
+      - "com.centurylinklabs.watchtower.enable=true"
+      - "traefik.enable=true"
+      - "traefik.http.routers.web.rule=Host(`voidmodding.org`)"
+    deploy:
+      replicas: 3
